# vib-code

./: .gitignore  README.md  pyproject.toml
vib_code/: __init__.py  action_parser.py  action_schema.py  agent_loop.py  approvals.py  cli.py  config.py  context_builder.py  memory_store.py  model_client.py  models.py  ollama_client.py  openai_client.py  patch_engine.py  path_mentions.py  render.py  tool_executor.py  trace.py  verifier.py
