[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "vib-code"
version = "0.1.0"
description = "Local terminal coding harness with structured tool use for Ollama and OpenAI."
requires-python = ">=3.11"

[project.scripts]
vib-code = "vib_code.cli:main"

[tool.setuptools]
packages = ["vib_code"]
